--- a/info/templates/info/t_homepage.html
+++ b/info/templates/info/t_homepage.html
@@ -35,7 +35,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link text-capitalize">{{ request.user.student.name }}</a>
+                <a class="nav-link text-capitalize">{{ request.user.teacher.name }}</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#" data-toggle="modal" data-target="#logoutModal">Logout</a>
